feat(muc): add comprehensive MUC MAM configuration with environment variables
- Add full environment variable support for mod_muc_mam settings
- Configure MUC archiving policy, retention, and performance options
- Add MUC-specific archive compression and smart archiving
- Support custom namespace exclusions for storage optimization
- Add room-level archiving notifications for privacy compliance
- Update env.example with all MUC MAM configuration options
- Create comprehensive MUC archiving documentation with:
  - Configuration guide for all settings
  - Client usage instructions for major XMPP clients
  - Monitoring and maintenance procedures
  - GDPR compliance and privacy considerations
  - Troubleshooting guide for common issues
  - Performance tuning recommendations
  - Database optimization tips

Enhances XEP-0313 (Message Archive Management) for Multi-User Chat
with production-ready defaults and full configurability.

--- a/examples/env.example
+++ b/examples/env.example
@@ -199,6 +199,73 @@ TURN_REALM=atl.chat
 # See examples/prometheus-scrape-config.yml for configuration
 
 # ============================================================================
+# MUC (MULTI-USER CHAT) MESSAGE ARCHIVING SETTINGS
+# ============================================================================
+
+# MUC archiving enabled by default for new rooms (true/false)
+# When true, all new rooms will have archiving enabled automatically
+# When false, room admins must manually enable archiving per room
+# Default: true (recommended for compliance and user experience)
+# PROSODY_MUC_LOG_BY_DEFAULT=true
+
+# Archive presence information in MUC rooms (joins/parts/status changes)
+# Useful for web interfaces and room activity tracking
+# Can increase storage usage significantly in busy rooms
+# Default: false (presence changes are frequent and less important)
+# PROSODY_MUC_LOG_PRESENCES=false
+
+# Force archiving for all rooms (disables room-level configuration)
+# When true, all rooms are archived regardless of room settings
+# When false, rooms can individually enable/disable archiving
+# Default: false (allows room-level control)
+# PROSODY_MUC_LOG_ALL_ROOMS=false
+
+# MUC archive retention period (how long room messages are stored)
+# Supports: "1d", "1w", "1m", "1y", "never", or seconds as number
+# Default: "1y" (1 year for compliance)
+# Note: This is separate from personal MAM expiry settings
+# PROSODY_MUC_LOG_EXPIRES_AFTER=1y
+
+# MUC archive cleanup interval (how often to remove expired messages)
+# Default: 86400 (daily cleanup for efficiency)
+# Frequent cleanup reduces storage but increases CPU usage
+# PROSODY_MUC_LOG_CLEANUP_INTERVAL=86400
+
+# Maximum messages returned per MUC MAM query (pagination)
+# Too low = many queries needed, too high = resource intensive
+# Default: 100, Range: 50-250 for good UX
+# PROSODY_MUC_MAX_ARCHIVE_QUERY_RESULTS=100
+
+# MUC archive store name (advanced setting, usually not changed)
+# Default: "muc_log", Legacy: "muc_archive" for old installations
+# PROSODY_MUC_LOG_STORE=muc_log
+
+# Archive compression for MUC messages (save storage space)
+# Default: true (recommended for production efficiency)
+# PROSODY_MUC_LOG_COMPRESSION=true
+
+# Smart MUC archiving (only enable for rooms that actually use MAM)
+# Default: false (archive for all configured rooms)
+# true = only start archiving after first MAM query in the room
+# PROSODY_MUC_MAM_SMART_ENABLE=false
+
+# MUC archive policy (which messages get archived by default)
+# "all" = archive all messages, "none" = archive nothing by default
+# Default: "all" (recommended for group chat compliance)
+# PROSODY_MUC_ARCHIVE_POLICY=all
+
+# Room archiving notification (notify users about archiving)
+# Notify users when they join a room that has archiving enabled
+# Helps with privacy compliance (GDPR, etc.)
+# Default: true (recommended for transparency)
+# PROSODY_MUC_LOG_NOTIFICATION=true
+
+# Custom namespaces to exclude from MUC archiving (comma-separated)
+# Reduces storage overhead by excluding less important stanzas
+# Default excludes: chatstates, jingle-message, muc#user (optional)
+# PROSODY_MUC_ARCHIVE_EXCLUDE_NAMESPACES=http://example.com/custom,urn:example:custom
+
+# ============================================================================
 # WEB ACCESS URLS (with default ports)
 # ============================================================================
 
