feat(muc): add comprehensive pastebin support for automatic long message handling
- Add mod_pastebin to MUC component modules for automatic pastebin conversion
- Configure pastebin thresholds, expiry, and trigger settings with environment variables
- Set production-ready defaults: 800 char threshold, 6 line limit, 1 week retention
- Add optional trigger string support for manual pastebin conversion
- Support custom URL path configuration for pastebin service
- Update service discovery to include pastebin service
- Add pastebin service to web access URLs documentation
- Create comprehensive pastebin documentation with:
  - Configuration guide for all settings and thresholds
  - Client usage instructions and compatibility matrix
  - Monitoring and maintenance procedures
  - Security considerations and privacy controls
  - Troubleshooting guide for common issues
  - Performance tuning recommendations
  - Advanced configuration examples

Prevents chat spam from long messages by converting them to clickable URLs
Enhances MUC user experience with automatic code/log sharing via pastebin
Includes built-in web interface with syntax highlighting and line numbers

--- a/examples/env.example
+++ b/examples/env.example
@@ -266,12 +266,52 @@ TURN_REALM=atl.chat
 # PROSODY_MUC_ARCHIVE_EXCLUDE_NAMESPACES=http://example.com/custom,urn:example:custom
 
 # ============================================================================
+# MUC PASTEBIN SETTINGS (AUTOMATIC LONG MESSAGE HANDLING)
+# ============================================================================
+
+# Maximum message length before pastebin conversion (characters)
+# Messages longer than this will be automatically converted to pastebin URLs
+# Default: 800 characters (increased from upstream default of 500)
+# Range: 300-2000 characters for good UX
+# PROSODY_PASTEBIN_THRESHOLD=800
+
+# Maximum number of lines before pastebin conversion
+# Messages with more lines than this will be converted to pastebin
+# Default: 6 lines (increased from upstream default of 4)
+# Range: 3-10 lines for good UX
+# PROSODY_PASTEBIN_LINE_THRESHOLD=6
+
+# Trigger string to force pastebin (optional)
+# If a message starts with this string, it's always sent to pastebin
+# Useful for intentionally sharing code/logs regardless of length
+# Examples: "!paste", "```", "/paste", "##paste"
+# Default: not set (no trigger)
+# PROSODY_PASTEBIN_TRIGGER=!paste
+
+# Pastebin expiry time (hours)
+# How long pastes are stored before automatic deletion
+# Default: 168 hours (1 week, increased from upstream default of 24h)
+# Common values: 24 (1 day), 168 (1 week), 720 (1 month), 0 (permanent)
+# PROSODY_PASTEBIN_EXPIRE_AFTER=168
+
+# Pastebin URL path customization (advanced setting)
+# Customize the URL path for pastebin service
+# Default: "/pastebin/" (standard path)
+# Examples: "/paste/", "/$host-paste/", "/p/"
+# PROSODY_PASTEBIN_PATH=/pastebin/
+
+# Pastebin service URL: http://your-domain:5280/pastebin/
+# Long messages in MUC rooms will be automatically converted to these URLs
+# Users can click the URL to view the full message content
+
+# ============================================================================
 # WEB ACCESS URLS (with default ports)
 # ============================================================================
 
 # XMPP Services:
 # - Admin Panel: https://xmpp.atl.chat:5281/admin
 # - File Upload: https://xmpp.atl.chat:5281/upload
+# - Pastebin: http://xmpp.atl.chat:5280/pastebin/
 # - WebSocket: wss://xmpp.atl.chat:5281/xmpp-websocket
 # - BOSH: https://xmpp.atl.chat:5281/http-bind
 
