docs: fix letsencrypt-webroot documentation and setup
- Update letsencrypt-webroot/README.md to match actual Docker setup
- Remove outdated manual Nginx/Apache configuration instructions
- Document how Prosody serves the webroot automatically
- Create proper directory structure with .well-known/acme-challenge/
- Add .gitkeep to preserve directory structure in git
- Update .gitignore to allow README and directory structure but ignore challenge files
- Clarify that this directory is essential for Let's Encrypt HTTP-01 challenges

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,11 @@ research/
 # Runtime data directories (local bind mounts)
 logs/
 certs/
-letsencrypt-webroot/
+letsencrypt-webroot/*
+!letsencrypt-webroot/README.md
+!letsencrypt-webroot/.well-known/
+letsencrypt-webroot/.well-known/acme-challenge/*
+!letsencrypt-webroot/.well-known/acme-challenge/.gitkeep
 
 # Environment configuration
 .env
