feat: switch to DNS-01 challenges for wildcard certificates
- Replace HTTP-01 webroot validation with DNS-01 Cloudflare challenges
- Update docker-compose.yml to use certbot/dns-cloudflare image
- Add cloudflare-credentials.ini.example template for API configuration
- Update certificate documentation for wildcard certificate support
- Remove letsencrypt-webroot volume mount from prosody service (no longer needed)
- Remove HTTP acme-challenge configuration from prosody.cfg.lua
- Add cloudflare-credentials.ini to .gitignore for security
- Document all subdomains covered by wildcard cert (muc, upload, proxy)
- Explain DNS-01 challenge process and Cloudflare API requirements

This enables proper wildcard certificate support for all XMPP subdomains
while maintaining compatibility with Cloudflare-managed domains.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,9 +50,6 @@ services:
       # Logs (local directory for easier access)
       - ./logs:/var/log/prosody
 
-      # Let's Encrypt webroot (for HTTP-01 challenges)
-      - ./letsencrypt-webroot:/var/www/certbot
-
     # Health check
     healthcheck:
       test: ['CMD', '/opt/prosody/scripts/health-check.sh']
@@ -245,18 +242,19 @@ services:
   # CERTIFICATE MANAGEMENT SERVICES
   # ============================================================================
   
-  # Let's Encrypt certificate management
+  # Let's Encrypt certificate generation (DNS-01 challenge for wildcard support)
   certbot:
-    image: certbot/certbot:latest
+    image: certbot/dns-cloudflare:latest
     container_name: prosody-certbot
     volumes:
       - ./certs:/etc/letsencrypt
-      - ./letsencrypt-webroot:/var/www/certbot
+      - ./cloudflare-credentials.ini:/etc/letsencrypt/cloudflare-credentials.ini:ro
     # Environment variables automatically loaded from .env file
     command: >
       certonly
-      --webroot
-      --webroot-path=/var/www/certbot
+      --dns-cloudflare
+      --dns-cloudflare-credentials=/etc/letsencrypt/cloudflare-credentials.ini
+      --dns-cloudflare-propagation-seconds=60
       --email admin@${PROSODY_DOMAIN:-atl.chat}
       --agree-tos
       --no-eff-email
@@ -271,11 +269,11 @@ services:
 
   # Certificate renewal service
   certbot-renew:
-    image: certbot/certbot:latest
+    image: certbot/dns-cloudflare:latest
     container_name: prosody-certbot-renew
     volumes:
       - ./certs:/etc/letsencrypt
-      - ./letsencrypt-webroot:/var/www/certbot
+      - ./cloudflare-credentials.ini:/etc/letsencrypt/cloudflare-credentials.ini:ro
     command: renew --quiet
     profiles:
       - renewal
