fix: update Let's Encrypt email to admin@allthingslinux.org
- Use organization email for Let's Encrypt certificate notifications
- Ensures proper contact for certificate renewal issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -255,7 +255,7 @@ services:
       --dns-cloudflare
       --dns-cloudflare-credentials=/etc/letsencrypt/cloudflare-credentials.ini
       --dns-cloudflare-propagation-seconds=60
-      --email admin@${PROSODY_DOMAIN:-atl.chat}
+      --email admin@allthingslinux.org
       --agree-tos
       --no-eff-email
       --expand
