feat: make Let's Encrypt email configurable via environment variable
- Add LETSENCRYPT_EMAIL environment variable with default admin@allthingslinux.org
- Update docker-compose.yml to use env var with fallback
- Add to env.example and update all documentation
- Allows easy customization of certificate notification email

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -255,7 +255,7 @@ services:
       --dns-cloudflare
       --dns-cloudflare-credentials=/etc/letsencrypt/cloudflare-credentials.ini
       --dns-cloudflare-propagation-seconds=60
-      --email admin@allthingslinux.org
+      --email ${LETSENCRYPT_EMAIL:-admin@allthingslinux.org}
       --agree-tos
       --no-eff-email
       --expand
