--- a/examples/env.example
+++ b/examples/env.example
@@ -17,6 +17,9 @@ PROSODY_DOMAIN=atl.chat
 # Use the same domain as PROSODY_DOMAIN
 PROSODY_ADMINS=admin@atl.chat
 
+# Let's Encrypt email for certificate notifications
+LETSENCRYPT_EMAIL=admin@allthingslinux.org
+
 # ============================================================================
 # DATABASE CONFIGURATION
 # ============================================================================
