fix: update cloudflare-credentials.ini.example path references
- Updated all copy commands to use examples/cloudflare-credentials.ini.example
- Fixed references in documentation files (admin, user, certs)
- Updated setup script to use new path
- Updated comment in example file to reflect relative path

--- a/examples/cloudflare-credentials.ini.example
+++ b/examples/cloudflare-credentials.ini.example
@@ -1,5 +1,5 @@
 # Cloudflare API credentials for Let's Encrypt DNS-01 challenges
-# Copy this file to cloudflare-credentials.ini and fill in your credentials
+# Copy this file to ../cloudflare-credentials.ini and fill in your credentials
 
 # Option 1: Global API Key (legacy, not recommended)
 # dns_cloudflare_email = your-email@example.com
