fix: clarify environment variable loading in docker-compose
- Add explicit env_file directive to load all variables from .env
- Update comments to explain container-to-container communication overrides
- PROSODY_DB_HOST and PROSODY_DB_PORT are fixed for internal networking

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,11 @@ services:
     hostname: prosody
     restart: unless-stopped
 
-    # Environment variables loaded from .env file
-    # Create a .env file in the same directory as docker-compose.yml
-    # All PROSODY_* variables will be automatically loaded
+    # Environment variables
+    env_file:
+      - .env
     environment:
-      # Fixed database connection (container-to-container)
+      # Override database connection for container-to-container communication
       - PROSODY_DB_HOST=db
       - PROSODY_DB_PORT=5432
 
