--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,6 +114,9 @@ services:
     restart: unless-stopped
 
     # Environment variables automatically loaded from .env file
+    env_file:
+      - path: .env
+        required: true
     environment:
       - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
 
@@ -302,6 +305,8 @@ services:
     configs:
       - source: adminer-index.php
         target: /var/www/html/index.php
+      - source: adminer-theme.css
+        target: /var/www/html/adminer.css
     depends_on:
       db:
         condition: service_healthy
@@ -334,14 +339,8 @@ configs:
   adminer-index.php:
     content: |
       <?php
-        if(!count($_GET)) {
-          $_POST['auth'] = [
-            'server' => $_ENV['ADMINER_DEFAULT_SERVER'],
-            'username' => $_ENV['ADMINER_DEFAULT_USERNAME'],
-            'password' => $_ENV['ADMINER_DEFAULT_PASSWORD'],
-            'driver' => $_ENV['ADMINER_DEFAULT_DRIVER'],
-            'db'    => $_ENV['ADMINER_DEFAULT_DB'],
-          ];
-        }
         include './adminer.php';
       ?>
+
+  adminer-theme.css:
+    file: ./examples/adminer-theme.css
