fix: restore auto-login functionality for Adminer
- Fix PHP variable escaping in docker-compose.yml to prevent substitution
- Auto-populate login form with database credentials from environment
- Users can now access database with pre-filled credentials
- Maintains Hydra Dark Theme while providing seamless authentication

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -339,6 +339,15 @@ configs:
   adminer-index.php:
     content: |
       <?php
+        if (empty($$_GET)) {
+          $$_POST['auth'] = [
+            'server' => getenv('ADMINER_DEFAULT_SERVER'),
+            'username' => getenv('ADMINER_DEFAULT_USERNAME'),
+            'password' => getenv('ADMINER_DEFAULT_PASSWORD'),
+            'driver' => getenv('ADMINER_DEFAULT_DRIVER'),
+            'db' => getenv('ADMINER_DEFAULT_DB'),
+          ];
+        }
         include './adminer.php';
       ?>
 
