feat: add environment-controlled auto-login security for Adminer
- Add ADMINER_AUTO_LOGIN environment variable to control auto-login behavior
- Auto-login only works when ADMINER_AUTO_LOGIN=true (development)
- Default to false in examples/env.example for production safety
- Update README.md with security documentation
- Ensures production deployments require manual login for security
- Maintains development convenience while enforcing production security

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -339,7 +339,8 @@ configs:
   adminer-index.php:
     content: |
       <?php
-        if (empty($$_GET)) {
+        // Only auto-login in development environments
+        if (getenv('ADMINER_AUTO_LOGIN') === 'true' && empty($$_GET)) {
           $$_POST['auth'] = [
             'server' => getenv('ADMINER_DEFAULT_SERVER'),
             'username' => getenv('ADMINER_DEFAULT_USERNAME'),
