--- a/examples/env.example
+++ b/examples/env.example
@@ -344,3 +344,9 @@ TURN_REALM=atl.chat
 
 # Custom service selection:
 # docker compose up -d prosody db prometheus 
+# ============================================================================
+# DEVELOPMENT SETTINGS
+# ============================================================================
+
+# Enable auto-login for Adminer (development only - set to false in production)
+ADMINER_AUTO_LOGIN=false
