--- a/examples/env.example
+++ b/examples/env.example
@@ -337,13 +337,13 @@ TURN_REALM=atl.chat
 # ============================================================================
 
 # Minimal deployment (XMPP + Database only):
-# docker compose up -d prosody db
+# docker compose up -d xmpp-prosody xmpp-postgres
 
 # Full deployment (all services):
 # docker compose up -d
 
 # Custom service selection:
-# docker compose up -d prosody db prometheus 
+# docker compose up -d xmpp-prosody xmpp-postgres 
 # ============================================================================
 # DEVELOPMENT SETTINGS
 # ============================================================================
