--- a/examples/prometheus-scrape-config.yml
+++ b/examples/prometheus-scrape-config.yml
@@ -8,7 +8,7 @@ scrape_configs:
   # ============================================================================
   # PROSODY XMPP SERVER METRICS
   # ============================================================================
-  - job_name: "prosody-xmpp"
+  - job_name: "xmpp-prosody"
     metrics_path: "/metrics"
     scheme: "http" # Use 'https' if SSL enabled on port 5281
     scrape_interval: 30s
@@ -125,7 +125,7 @@ scrape_configs:
 # - name: prosody.rules
 #   rules:
 #   - alert: ProsodyDown
-#     expr: up{job="prosody-xmpp"} == 0
+#     expr: up{job="xmpp-prosody"} == 0
 #     for: 1m
 #     labels:
 #       severity: critical
