feat: update all paths to use production deployment location /opt/xmpp.atl.chat
- Update all cron job references from /path/to/xmpp.atl.chat to /opt/xmpp.atl.chat
- Update git clone commands to clone directly to /opt/xmpp.atl.chat
- Update certificate paths in nginx/apache examples to use actual cert locations
- Update script paths and references to use production deployment path
- Update static file paths to use production location
- Update prosody service restart command in cron example

This ensures all documentation and examples reflect the expected production deployment location.

--- a/examples/apache-websocket.conf
+++ b/examples/apache-websocket.conf
@@ -35,9 +35,9 @@ ServerAlias www.atl.chat
 
 # SSL Configuration
 SSLEngine on
-SSLCertificateFile /path/to/your/certificate.crt
-SSLCertificateKeyFile /path/to/your/private.key
-# SSLCertificateChainFile /path/to/your/chain.crt  # If using certificate chain
+    SSLCertificateFile /opt/xmpp.atl.chat/certs/live/atl.chat/fullchain.pem
+    SSLCertificateKeyFile /opt/xmpp.atl.chat/certs/live/atl.chat/privkey.pem
+    # SSLCertificateChainFile /opt/xmpp.atl.chat/certs/live/atl.chat/chain.pem  # If using certificate chain
 
 # Modern SSL configuration
 SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
@@ -217,8 +217,8 @@ ServerName xmpp.atl.chat
 
 # SSL configuration (use separate certificate or wildcard)
 SSLEngine on
-SSLCertificateFile /path/to/xmpp.atl.chat.crt
-SSLCertificateKeyFile /path/to/xmpp.atl.chat.key
+    SSLCertificateFile /opt/xmpp.atl.chat/certs/live/atl.chat/fullchain.pem
+    SSLCertificateKeyFile /opt/xmpp.atl.chat/certs/live/atl.chat/privkey.pem
 
 # SSL settings (same as above)
 SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
@@ -269,8 +269,8 @@ ServerName cluster.atl.chat
 
 # SSL configuration
 SSLEngine on
-SSLCertificateFile /path/to/cluster.atl.chat.crt
-SSLCertificateKeyFile /path/to/cluster.atl.chat.key
+    SSLCertificateFile /opt/xmpp.atl.chat/certs/live/atl.chat/fullchain.pem
+    SSLCertificateKeyFile /opt/xmpp.atl.chat/certs/live/atl.chat/privkey.pem
 
 <IfModule mod_proxy.c>
 ProxyPreserveHost On
