--- a/examples/nginx-websocket.conf
+++ b/examples/nginx-websocket.conf
@@ -25,8 +25,8 @@ server {
     server_name atl.chat;
 
     # SSL/TLS Configuration
-    ssl_certificate /path/to/your/certificate.crt;
-    ssl_certificate_key /path/to/your/private.key;
+    ssl_certificate /opt/xmpp.atl.chat/certs/live/atl.chat/fullchain.pem;
+    ssl_certificate_key /opt/xmpp.atl.chat/certs/live/atl.chat/privkey.pem;
 
     # Modern SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -226,8 +226,8 @@ server {
     server_name xmpp.atl.chat;
 
     # SSL configuration (use separate certificate or wildcard)
-    ssl_certificate /path/to/xmpp.atl.chat.crt;
-    ssl_certificate_key /path/to/xmpp.atl.chat.key;
+    ssl_certificate /opt/xmpp.atl.chat/certs/live/atl.chat/fullchain.pem;
+    ssl_certificate_key /opt/xmpp.atl.chat/certs/live/atl.chat/privkey.pem;
 
     # SSL settings (same as above)
     ssl_protocols TLSv1.2 TLSv1.3;
