fix(docker): adjust COTURN port range to avoid conflicts
- Change COTURN UDP port range from 49152-49200 to 49300-49350
- This avoids conflicts with existing services on the host

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -152,8 +152,8 @@ services:
       - '3478:3478/udp'
       - '5349:5349'
       - '5349:5349/udp'
-      # Simplified relay port range for development
-      - '49152-49200:49152-49200/udp'
+      # Simplified relay port range for development (shifted to avoid conflicts)
+      - '49300-49350:49152-49202/udp'
     
     environment:
       - TURN_NO_LOOPBACK_PEERS=false  # Allow loopback for development
