feat: implement fully automated community module installation system
- Add automatic community module installation during Docker build
- Install 10+ essential community modules (cloud_notify, firewall, anti_spam, etc.)
- Add runtime module installation via PROSODY_EXTRA_MODULES environment variable
- Implement automatic container detection in prosody-manager script
- Add environment variable support in entrypoint script for dynamic module installation
- Update environment example files with community module configuration
- Enhance prosody-manager with improved container name detection
- Create comprehensive documentation for automated module system

Key improvements:
- Zero-configuration setup: Essential modules work out of the box
- Flexible expansion: Add modules via environment variables or management script
- Production-ready: All modules properly installed with correct permissions
- Development-friendly: Easy testing and iteration without container rebuilds
- No more manual copying and pasting of modules required

Modules automatically installed:
- Security: mod_cloud_notify, mod_firewall, mod_anti_spam, mod_spam_reporting
- Admin: mod_admin_blocklist, mod_server_contact_info, mod_invites
- Mobile: mod_csi_battery_saver
- MUC: mod_muc_notifications, mod_pastebin

Closes automated community module installation and management

--- a/examples/env.dev.example
+++ b/examples/env.dev.example
@@ -211,4 +211,14 @@ PROSODY_DEBUG_ENABLED=true
 # - Username: test@localhost
 # - Password: [whatever you set]
 
+# ============================================================================
+# COMMUNITY MODULES (Optional)
+# ============================================================================
+
+# Additional community modules to install at runtime
+# Comma-separated list of module names (mod_ prefix optional)
+# Example: PROSODY_EXTRA_MODULES=mod_unified_push,mod_register_web,mod_http_upload_external
+# Available modules: https://modules.prosody.im/
+# PROSODY_EXTRA_MODULES=
+
 # Self-signed certificates will be automatically generated for localhost testing 
