--- a/examples/env.example
+++ b/examples/env.example
@@ -345,6 +345,16 @@ TURN_REALM=atl.chat
 # Custom service selection:
 # docker compose up -d xmpp-prosody xmpp-postgres 
 # ============================================================================
+# COMMUNITY MODULES (Optional)
+# ============================================================================
+
+# Additional community modules to install at runtime
+# Comma-separated list of module names (mod_ prefix optional)
+# Example: PROSODY_EXTRA_MODULES=mod_unified_push,mod_register_web,mod_http_upload_external
+# Available modules: https://modules.prosody.im/
+# PROSODY_EXTRA_MODULES=
+
+# ============================================================================
 # DEVELOPMENT SETTINGS
 # ============================================================================
 
